--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,8 +9,8 @@ html {
 
 body {
   margin: 0;
-  padding: $masthead-height 0 0;
-  padding-bottom: 9em;
+  padding: 0 0 0;
+  padding-bottom: 0em;
   color: $text-color;
   font-family: $global-font-family;
   line-height: 1.5;
